Update Author “robert-wallach” (#417)
Automatically generated. Merged on Netlify CMS.

--- a/netlify/authors/robert-wallach.yaml
+++ b/netlify/authors/robert-wallach.yaml
@@ -1,5 +1,5 @@
 path: /blog/author/robert-wallach
-tag: Author
+tag: author
 title: Robert Wallach
 subtitle: >-
   Editor-in-chief, contributing writer, and jack-of-all-trades at Stoplight.
