--- a/netlify/lists/blog-documentation.yaml
+++ b/netlify/lists/blog-documentation.yaml
@@ -1,20 +1,21 @@
 path: /blog/api-documentation
-tag: 'blog-documentation'
-subtitle:
-color: 'purple'
+tag: blog-documentation
 title: API Documentation
+subtitle: ' '
+color: purple
 buttons:
-  - title: API Design
-    href: /blog/api-design
-  - title: API Documentation
-    href: /blog/api-documentation
-    icon: check-circle
-  - title: API Testing
-    href: /blog/api-testing
-  - title: Changelog
-    href: /blog/changelog
-  - title: Archive
-    href: /blog
+  - href: /blog/blog-general
+    title: General
+  - href: /blog/api-design
+    title: API Design
+  - href: /blog/api-documentation
+    title: API Documentation
+  - href: /blog/api-testing
+    title: API Testing
+  - href: /blog/changelog
+    title: Changelog
+  - href: /blog
+    title: Archive
 actionBar:
   enabled: true
 meta:
