Update Author “lukas-rosenstock” (#487)
Automatically generated. Merged on Netlify CMS.

--- a/netlify/authors/lukas-rosenstock.yaml
+++ b/netlify/authors/lukas-rosenstock.yaml
@@ -1,6 +1,6 @@
 path: /blog/author/lukas-rosenstock
 tag: Author
-title: 'Lukas Rosenstock '
+title: Lukas Rosenstock
 subtitle: >-
   Lukas Rosenstock is an independent software developer (PHP/JS), technical
   writer, API consultant, and entrepreneur who has a decade of experience
