--- a/netlify/lists/blog-changelog.yaml
+++ b/netlify/lists/blog-changelog.yaml
@@ -1,10 +1,9 @@
 path: /blog/changelog
 tag: blog-changelog
 title: Changelog
-subtitle: ' '
 color: purple
-buttons:
-  - href: /blog/blog-general
+tabs:
+  - href: /blog/general
     title: General
   - href: /blog/api-design
     title: API Design
