--- a/netlify/lists/general.yaml
+++ b/netlify/lists/general.yaml
@@ -1,10 +1,9 @@
 path: /blog/general
 tag: blog-general
 title: General
-subtitle: ' '
 color: purple
-buttons:
-  - href: /blog/blog-general
+tabs:
+  - href: /blog/general
     title: General
   - href: /blog/api-design
     title: API Design
@@ -17,7 +16,6 @@ buttons:
   - href: /blog
     title: Archive
 actionBar:
-  buttons: []
   enabled: true
 meta:
   favicon: /images/mark_light_bg.png
