--- a/netlify/authors/chris-lott.yaml
+++ b/netlify/authors/chris-lott.yaml
@@ -1,12 +1,10 @@
 path: /blog/author/chris-lott
 tag: Author
 title: Chris Lott
-subtitle: bio
+subtitle: ' '
 pageName: Software Engineer
 image: /images/lott_headshot.png
 color: orange
-buttons:
-  - {}
 actionBar:
   buttons:
     - color: purple
