--- a/netlify/authors/william-hilton.yaml
+++ b/netlify/authors/william-hilton.yaml
@@ -10,9 +10,7 @@ pageName: Software Engineer
 image: /images/hilton_headshot.png
 color: indigo
 actionBar:
-  buttons:
-    - color: purple
-  enabled: true
+  enabled: false
 meta:
   favicon: /images/mark_light_bg.png
   robots: 'index, follow'
