--- a/netlify/authors/chris-lott.yaml
+++ b/netlify/authors/chris-lott.yaml
@@ -6,9 +6,7 @@ pageName: Software Engineer
 image: /images/lott_headshot.png
 color: orange
 actionBar:
-  buttons:
-    - color: purple
-  enabled: true
+  enabled: false
 meta:
   favicon: /images/mark_light_bg.png
   robots: 'index, follow'
