--- a/netlify/authors/thomas-pytleski.yaml
+++ b/netlify/authors/thomas-pytleski.yaml
@@ -6,9 +6,7 @@ pageName: Software Engineer
 image: /images/pytleski_headshot.png
 color: yellow
 actionBar:
-  buttons:
-    - color: purple
-  enabled: true
+  enabled: false
 meta:
   favicon: /images/mark_light_bg.png
   robots: 'index, follow'
