--- a/netlify/lists/blog-documentation.yaml
+++ b/netlify/lists/blog-documentation.yaml
@@ -3,6 +3,8 @@ tag: blog-documentation
 title: API Documentation
 color: purple
 tabs:
+  - href: /blog
+    title: Latest
   - href: /blog/general
     title: General
   - href: /blog/api-design
@@ -13,15 +15,13 @@ tabs:
     title: API Testing
   - href: /blog/changelog
     title: Changelog
-  - href: /blog
-    title: Archive
 actionBar:
   enabled: true
 meta:
   favicon: /images/mark_light_bg.png
-  title: API Documentation | Stoplight
+  title: API Documentation | Stoplight API Corner
   twitter:
-    title: API Documentation | Stoplight
+    title: API Documentation | Stoplight API Corner
     username: '@stoplightio'
 pagination:
   enabled: true
