Update Page “home” (#627)
Automatically generated. Merged on Netlify CMS.

--- a/netlify/pages/home.yaml
+++ b/netlify/pages/home.yaml
@@ -38,83 +38,36 @@ hero:
     Stoplight leverages your OpenAPI documents to drive the entire API
     development process
   title: 'Best in class API Design, Docs, Mocking, and Testing'
-imageCallout:
-  cta:
-    href: 'https://next.stoplight.io/'
-    name: Get Started Now
-  description: >-
-    Create OpenAPI Specifications (formerly known as Swagger) 10x faster with no
-    specialized knowledge required. Combine OpenAPI documents with Markdown to
-    create beautiful documentation for internal and external stakeholders.
-    Instantly turn any OpenAPI document into a mock server. Leverage contract
-    testing to ensure that your Single Source of Truth - OpenAPI Specification -
-    accurately describe your APIs.
-  image: /images/home-hero.png
-  title: The Complete OpenAPI Specification Toolkit
 collage:
-  title: 'Thousands of companies use Stoplight to streamline
-their API & Microservices workflow'
   cta:
-    name: Read the Case Studies
-    href: /case-studies
     color: green
+    href: /case-studies
+    name: Read the Case Studies
   images:
-    - src: /images/ea.png
-      alt: EA
-    - src: /images/logo_arkea_transparent.png
-      alt: Arkea
-    - src: /images/chargify-new-logo.png
-      alt: Chargify
-    - src: /images/deutsche_bank.png
-      alt: Deutsche Bank
-    - src: /images/customers/quicken.png
-      alt: quicken
-    - src: /images/logo-sendgrid.png
-      alt: Sendgrid
-    - src: /images/shopgate.png
-      alt: Shopgate
-    - src: /images/spotify.png
-      alt: Spotify
-    - src: /images/tivo.png
-      alt: TiVo
-    - src: /images/logo_zendesk.png
-      alt: Zendesk
-testimonials:
-  testimonials:
-    - author: Kin Lane
-      image: /images/testimonials/kin_lane.jpeg
-      quote: >-
-        I feel like Stoplight has the potential to shift the landscape pretty
-        significantly, something I haven't seen any API service provider do in a
-        while.
-      role: API Evangelist
-    - author: 'Carlos Lozano '
-      image: /images/carlos_testimonial.jpeg
-      quote: >-
-        When it comes to specification markup and documentation, the order of
-        magnitude has gone from days to hours.
-      role: 'Senior Enterprise Architect, GFT Group'
-    - author: John Vajda
-      image: /images/testimonials/john_vajda.jpeg
-      quote: >-
-        Stoplight has been a serious game changer for JumpCloud’s API development!
-        We love all the rich design, documentation and testing features, which has
-        enabled us to design awesome APIs for our customers.
-      role: 'Product Manager, JumpCloud'
-    - author: Gil Barbara
-      image: /images/testimonials/gil.jpeg
-      quote: >-
-        Stoplight provides a centralized, testable and reliable source for our
-        APIs.
-      role: 'Frontend Engineer, AMARO'
-  actionBar:
-    enabled: true
-    buttons:
-      - color: purple
-        href: /demo
-        outlined: true
-        title: Request a Demo
-      - color: purple
-        href: 'https://next.stoplight.io'
-        title: Create a Free Account
-    text: Getting started is easy. Be up and running in minutes.
+    - alt: EA
+      src: /images/ea.png
+    - alt: Arkea
+      src: /images/logo_arkea_transparent.png
+    - alt: Chargify
+      src: /images/chargify-new-logo.png
+    - alt: Deutsche Bank
+      src: /images/deutsche_bank.png
+    - alt: quicken
+      src: /images/customers/quicken.png
+    - alt: Sendgrid
+      src: /images/logo-sendgrid.png
+    - alt: Shopgate
+      src: /images/shopgate.png
+    - alt: Spotify
+      src: /images/spotify.png
+    - alt: TiVo
+      src: /images/tivo.png
+    - alt: Zendesk
+      src: /images/logo_zendesk.png
+meta:
+  favicon: /images/mark_light_bg.png
+  title: The Complete API Toolkit for Teams and Enterprises | Stoplight
+  twitter:
+    image: /images/mark_light_bg.png
+    title: The Complete API Toolkit for Teams and Enterprises | Stoplight
+    username: '@stoplightio'
