fix: added meta descriptions

--- a/netlify/lists/blog.yaml
+++ b/netlify/lists/blog.yaml
@@ -21,6 +21,7 @@ actionBar:
 meta:
   favicon: /images/mark_light_bg.png
   title: Latest Stoplight Blog Posts | Stoplight API Corner
+  description: Find out all you need to know about API design, testing, mocking, and documentation from the official Stoplight Blog, written by some of the best minds in the business.
   twitter:
     title: Latest Stoplight Blog Posts | Stoplight API Corner
     username: '@stoplightio'
