--- a/netlify/forms/contact-us.yaml
+++ b/netlify/forms/contact-us.yaml
@@ -11,6 +11,7 @@ hubspot:
 meta:
   favicon: /images/mark_light_bg.png
   title: Find out how you can contact us | Stoplight
+  description: Have a question or inquiry to make about APIs or Stoplight itself? Get in touch here to find out everything you need to know about working with us.
   twitter:
     title: Find out how you can contact us | Stoplight
 collage:
