Feat seo changes (#675)
* fix(site): link prev for first page should not include /page/1

* fix: noindex landing page routes (removes lp's from sitemap)

* fix: chain redirects

* fix: list page 1 appearing in sitemaps and duplicating list root

* fix: fallback to meta description when twitter desc is not set

* fix: added meta descriptions

* fix: updated meta descriptions

--- a/netlify/pages/about.yaml
+++ b/netlify/pages/about.yaml
@@ -156,6 +156,7 @@ actionBar:
 meta:
   favicon: /images/mark_light_bg.png
   title: Learn About Us | Stoplight
+  description: Find out all you need to know about Stoplight and it's talented and creative team; united in their passion for creating best in class API tooling.
   twitter:
     title: Learn About Us | Stoplight
     username: '@stoplightio'
