--- a/netlify/settings.yaml
+++ b/netlify/settings.yaml
@@ -179,17 +179,13 @@ footer:
         - fab
         - github
 meta:
-  description: >-
-    Stoplight, providing engineering teams with the best way to document, test,
-    and build web APIs.
+  description: The Complete API Toolkit for Teams and Enterprise | Stoplight
   favicon: /favicons/favicon.ico
   image: /images/home-hero.png
   robots: 'index, follow'
   title: Stoplight
   twitter:
-    description: >-
-      Stoplight, providing engineering teams with the best way to document,
-      test, and build web APIs.
+    description: The Complete API Toolkit for Teams and Enterprise | Stoplight
     image: /images/home-hero.png
     title: Stoplight
     username: '@stoplightio'
