--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "netlify-cms": "2.3.x",
     "netlify-cms-widget-fontawesome": "3.1.0",
     "netlify-identity-widget": "1.4.14",
+    "prismjs": "1.16.x",
     "react": "16.5.x",
     "react-particles-js": "2.4.0-beta.10",
     "react-static": "5.9.12",
@@ -49,8 +50,8 @@
     "klaw": "3.0.x",
     "markdown-it": "8.4.x",
     "markdown-it-anchor": "5.0.x",
-    "markdown-it-video": "0.6.x",
     "markdown-it-toc-done-right": "2.0.x",
+    "markdown-it-video": "0.6.x",
     "node-sass": "4.10.x",
     "postcss": "7.0.x",
     "postcss-flexbugs-fixes": "4.1.x",
