--- a/netlify/forms/request-demo.yaml
+++ b/netlify/forms/request-demo.yaml
@@ -11,7 +11,7 @@ hubspot:
 meta:
   favicon: /images/mark_light_bg.png
   title: Get a demo of our API Toolkit | Stoplight
-  description: Want to see how we could help your company and organisation with our API Toolkit? Click here to request a demo and find out what we can do for you.
+  description: Want to see how we could help your company and organization with our API Toolkit? Click here to request a demo and find out what we can do for you.
   twitter:
     title: Get a demo of our API Toolkit | Stoplight
 collage:
