Moves newsletter form config to global settings
SC-110

--- a/netlify/settings.yaml
+++ b/netlify/settings.yaml
@@ -193,4 +193,5 @@ meta:
 integrations:
   googleTagManager: GTM-58LWL5P
   hubspot: 4892910
+  newsletterFormId: 1c56ad99-49f9-4933-aa83-a1bf9a09f7fb
   intercom: g7eo4oae
