feat: compress images during build process
commit 5c396726f291ae046a1baad7b7657b0a04a76705
Author: Chris <chrisnlott@gmail.com>
Date:   Tue Apr 16 02:04:08 2019 -0500

    fix: use max width 800 for medium pics

commit 703bbbd5e105e12c302803dfee0e8b5307730d8c
Author: Chris <chrisnlott@gmail.com>
Date:   Tue Apr 16 01:42:09 2019 -0500

    feat: add image processing

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/react-fontawesome": "0.1.x",
     "classnames": "2.2.x",
     "disqus-react": "^1.0.5",
+    "lodash.get": "^4.4.2",
     "netlify-cms": "2.3.x",
     "netlify-cms-widget-fontawesome": "3.1.0",
     "netlify-identity-widget": "1.4.14",
@@ -60,6 +61,7 @@
     "react-hot-loader": "^4.3.12",
     "sass-loader": "7.1.x",
     "serve": "10.1.x",
+    "sharp": "0.22.x",
     "style-loader": "0.23.x",
     "ts-loader": "5.3.x",
     "typescript": "3.1.x"
