--- a/netlify/pages/about.yaml
+++ b/netlify/pages/about.yaml
@@ -31,6 +31,9 @@ team:
   - image: /images/chelsea-hohmann-headshot.jpg
     name: Chelsea Hohmann
     role: Software Engineer
+  - image: /images/jakub-jankowski-headshot.jpg
+    name: Jakub Jankowski
+    role: Software Engineer
   - image: /images/lott_headshot.png
     name: Chris Lott
     role: Software Engineer
@@ -45,6 +48,9 @@ team:
     role: Sales Engineer
   - image: /images/chris-miaskowski-headshot.jpg
     name: Chris Miaskowski
+    role: Software Engineer
+  - image: /images/tommy-morgan-headshot.jpg
+    name: Tommy Morgan
     role: Software Engineer
   - image: /images/team/vazha-omanashvili.png
     name: Vazha Omanashvili
@@ -64,6 +70,9 @@ team:
   - image: /images/phil-sturgeon-headshot2.png
     name: Phil Sturgeon
     role: Software Architect
+  - image: /images/kristen-surratt-headshot.jpg
+    name: Kristen Surratt
+    role: Customer Advocate
   - image: /images/tharp_headshot.png
     name: Duane Tharp
     role: Sales & Partnerships
@@ -160,9 +169,11 @@ actionBar:
   enabled: true
   text: Want to join the team? We're hiring!
 meta:
+  description: >-
+    Find out all you need to know about Stoplight and it's talented and creative
+    team; united in their passion for creating best in class API tooling.
   favicon: /images/mark_light_bg.png
   title: Learn About Us | Stoplight
-  description: Find out all you need to know about Stoplight and it's talented and creative team; united in their passion for creating best in class API tooling.
   twitter:
     title: Learn About Us | Stoplight
     username: '@stoplightio'
