--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "netlify-identity-widget": "1.4.14",
     "prismjs": "1.16.x",
     "react": "16.5.x",
+    "react-headroom": "^2.2.8",
     "react-particles-js": "2.4.0-beta.10",
     "react-static": "5.9.12",
     "tailwindcss": "0.7.x"
